--- a/client/src/components/Sticky.css
+++ b/client/src/components/Sticky.css
@@ -4,7 +4,8 @@
   left: 0;
   right: 0;
   text-align: center;
-  padding: 0.5em 0;
+  padding: 1em 0;
   color: #fff;
+  font-weight: bold;
   background-color: #f86767;
 }
