--- a/client/src/Setting.css
+++ b/client/src/Setting.css
@@ -9,11 +9,13 @@ select {
   border: 0 !important;
   background: #f86767;
   background-image: none;
-  padding: 0.5em 2em;
   color: #fff;
   cursor: pointer;
   border-radius: 21px;
   font-size: 1.2em;
+  background-image: url("http://localhost:3000/images/arrow.png");
+  background-repeat: no-repeat;
+  background-position: right 20px center;
 }
 /* Remove IE arrow */
 select::-ms-expand {
@@ -28,13 +30,14 @@ select::-ms-expand {
   line-height: 3;
   background: #2c3e50;
   overflow: hidden;
-  border-radius: 0.25em;
 }
 select {
-  flex: 1;
-  padding: 0 0.5em;
+  padding: 0.6em 3em 0.6em 1.5em;
   color: #fff;
   cursor: pointer;
+  display: block;
+  margin: 1em auto;
+  border-radius: 2em;
 }
 /* Arrow */
 .select::after {
@@ -53,4 +56,14 @@ select {
 /* Transition */
 .select:hover::after {
   color: #f39c12;
+}
+
+p.desc {
+  font-size: 14px;
+  color: #666;
+}
+
+.container-setting img {
+  width: 22px;
+  margin-right: 10px;
 }
