--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,10 +7,11 @@ body {
 }
 
 .container {
-  padding-top: 50px;
+  padding-top: 55px;
   text-align: center;
   background: #fafafa;
   height: 100vh;
+  box-sizing: border-box;
 }
 
 input {
