--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,14 +2,14 @@
 
 body {
   font-family: "NanumBarunGothic", sans-serif;
-  background-color: #fafafa;
+  background-color: #f2f2f2;
   line-height: 1.6em;
 }
 
 .container {
   padding-top: 55px;
   text-align: center;
-  background: #fafafa;
+  background: #f2f2f2;
   height: 100vh;
   box-sizing: border-box;
 }
