Change salad image

--- a/client/src/Home.css
+++ b/client/src/Home.css
@@ -53,7 +53,7 @@ footer {
 
 .meal-thumb .lunch {
   background-size: cover;
-  background-image: url("/images/meal_thumb_2.jpeg");
+  background-image: url("/images/meal_thumb_2.png");
 }
 
 .meal-thumb img {
